Issue #23628 Cleanup + minor fixes
- formatting of the code to make it easier to read
- fixed several log messages (wrong formatting)
- ContainerInfo used to reduce duplications
- replaced several deprecated method calls with simple straight replacements
- deleted 20 years old TODOs